--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Interactiva</title>
+  <title>Malla Ingeniería Civil Informática UV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Interactiva - [Tu carrera]</h1>
+  <h1>Malla Interactiva - Ingeniería Civil Informática UV</h1>
   <div id="malla"></div>
-
   <script src="script.js"></script>
 </body>
 </html>
+
